Fix DomKey on Dvorak - QWERTY Command layout

Bug: 747358
Change-Id: I792b472132ea6deb4213206593136343a2050ccd